# D3D12-Trial

./: .clang-format  .gitignore  BuildUtilities.cmake  CMakeLists.txt  CMakePresets.json  ReadMe.md  pipeline.md
CMake/: BuildUtilities.cmake
Common/: CMakeLists.txt  Camera.cpp  Camera.h  Common.cpp  Common.h  D3D12App.cpp  D3D12App.h  D3D12MemAllocator.cpp  D3D12MemAllocator.hpp  D3D12Memory.cpp  D3D12Memory.hpp  D3D12RendererContext.cpp  D3D12RendererContext.hpp  DXUTmisc.cpp  DXUTmisc.h  DescriptorHeapAllocator.cpp  DescriptorHeapAllocator.h  GameTimer.cpp  GameTimer.h  GameTimer.hpp  GeometryGenerator.h  GeometryGenerator.inl  HpFileIo.cpp  HpFileIo.h  ImGuiForDX12.h  MeshBuffer.cpp  MeshBuffer.h  RenderableItem.cpp  RenderableItem.h  RenderableMaterialList.cpp  RenderableMaterialList.h  ResourceUploadBatch.cpp  ResourceUploadBatch.hpp  RootSignatureGenerator.cpp  RootSignatureGenerator.h  SDKmesh.cpp  SDKmesh.h  SyncFence.cpp  SyncFence.hpp  Texture.cpp  (+10 more)
Common/DXRHelpers/: AccelerationStructureGenerator.cpp  AccelerationStructureGenerator.h  RaytracingPipelineGenerator.cpp  RaytracingPipelineGenerator.h  ShaderBindingTableGenerator.cpp  ShaderBindingTableGenerator.h
Common/imgui/dx12/: imgui-dx12.vcxproj  imgui-dx12.vcxproj.filters
Common/imgui/dx12/x64/Debug/: imgui-dx12.idb
Common/imgui/dx12/x64/Debug/imgui-dx12.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  imgui-dx12.lastbuildstate
D3DTutorial/: CMakeLists.txt  CubeMapRenderTarget.cpp  CubeMapRenderTarget.h  GpuWaves.cpp  GpuWaves.h  InitD3D12App.cpp  LandAndWavesApp.cpp  LightUtils.cpp  LightUtils.h  Material.cpp  Material.h  RenderItem.cpp  RenderItem.h  ShadowMap.cpp  ShadowMap.h  ShapesApp.cpp
D3DTutorial/Shaders/: GpuWaves.hlsl  LandAndWaves.hlsl  LightUtils.hlsl  ShadowDepth.hlsl  Shapes.hlsl  Sky.hlsl  TreeBillboard.hlsl  box.hlsl
HDRToneMappingCS/: CMakeLists.txt  HDRToneMappingCS.cpp
HDRToneMappingCS/Shaders/: BrightPassAndHorzFilterCS.hlsl  FilterCS.hlsl  FinalPass.hlsl  Skybox.hlsl
HelloDXR/: CMakeLists.txt  HelloDXR.cpp
HelloDXR/Shaders/: HelloDXR_Simple.hlsl
LoadModel/: CMakeLists.txt  HpFileIo.cpp  LoadModel.cpp  Model.cpp  Model.hpp  ModelLoadSDKMESH.cpp  test.cpp
LoadModel/Shaders/: basic.hlsl
MultithreadedRendering/: CMakeLists.txt  MultithreadedDXUTMesh.cpp  MultithreadedDXUTMesh.h  MultithreadedRendering.cpp
MultithreadedRendering/Shaders/: MultithreadedRendering_VSPS.hlsl
NBodyGravity/: CMakeLists.txt  NBodyGravity.cpp
NBodyGravity/Shaders/: NBodyGravityCS.hlsl  ParticleDraw.hlsl
PredicationQueries/: CMakeLists.txt  PredicationQueries.cpp
PredicationQueries/Shaders/: DrawPredicated.hlsl
SubD12/: CMakeLists.txt  SubD12.cpp
SubD12/Shaders/: Catmall-Clark-Tess.hlsl
xtest/: CMakeLists.txt  xtest.cpp
